# android-auto-test

./: .gitignore  CLAUDE.md  README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts  skills-lock.json
agent-accessibility/: build.gradle.kts
agent-app/: build.gradle.kts
agent-core/: build.gradle.kts
agent-performance/: build.gradle.kts
agent-protocol/: build.gradle.kts
agent-root/: build.gradle.kts
agent-transport/: build.gradle.kts
docs/: TODO.md  api-reference.md  ci-cd-integration.md  getting-started.md  index.md  (+1 more)
pc-controller/: .env.example  pyproject.toml
pc-controller/configs/: default.yaml
pc-controller/src/autotest/: __init__.py
pc-controller/src/autotest/automation/: decorators.py  dsl.py  runner.py
pc-controller/src/autotest/cli/: app.py
pc-controller/src/autotest/core/: config.py  events.py  exceptions.py  types.py
pc-controller/src/autotest/device/: adb.py  agent_hub.py  client.py  manager.py  protocol.py  remote_client.py
pc-controller/src/autotest/nlp/: __init__.py  engine.py
pc-controller/src/autotest/performance/: analyzer.py  visualizer.py
pc-controller/src/autotest/plugins/: base.py  host.py
pc-controller/src/autotest/plugins/builtin/: image_match.py  ocr.py  visual_diff.py
pc-controller/src/autotest/reporter/: generator.py
pc-controller/src/autotest/reporter/formats/: allure.py  html.py  json_report.py  junit_xml.py
pc-controller/src/autotest/scheduler/: executor.py  planner.py
pc-controller/src/autotest/web/: app.py
pc-controller/tests/: test_example.py  test_ocr_click.py
(+49 files in other folders)
